--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,5 @@ import:
   version: ^1.4.0
 - package: github.com/gin-gonic/gin
   version: ^1.2.0
+- package: github.com/gin-contrib/cors
+  version: ^1.1
