--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-- name: csn-go-api-1
+- name: csn-go-api-beta
   memory: 24M
   instances: 1
-  command: csn-api-1
+  command: csn-api-beta
   random-route: true
 
